--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -4,6 +4,35 @@
 <div class="layui-fluid">
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody body-overflow">
+            <div class="layui-card margin_buttom5 padding20_10 overflow-y">
+                <!--<div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>所有通知环节</div>-->
+                <div class="layui-card-body layui-card-body-padding">
+                    <ul class="notice_ulstyle">
+                        <li><a href=""><p class="img img1"></p>下单关怀</a><span class="flowLineBottom"><img src="__STATIC__/style/images/flowLineBottom.png" alt=""></span><a href=""><p class="img"></p>货到付款</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>常规催付</a><span class="flowLineBottom"><img src="__STATIC__/style/images/flowLineBottom.png" alt=""></span><a href=""><p class="img"></p>预售催付</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>二次催付</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>付款提醒</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>发货提醒</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>同城提醒</a><span class="flowLineBottom"><img src="__STATIC__/style/images/flowLineBottom.png" alt=""></span><a href=""><p class="img"></p>迟发提醒</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>派件提醒</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>签收提醒</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>评价提醒</a><span class="flowLineBottom"><img src="__STATIC__/style/images/flowLineBottom.png" alt=""></span><a href=""><p class="img"></p>退款关怀</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>好评感谢</a><span class="flowLineBottom"><img src="__STATIC__/style/images/flowLineBottom.png" alt=""></span><a href=""><p class="img"></p>中差评安抚</a></li>
+                        <li class="flowLine"></li>
+                        <li><a href=""><p class="img"></p>售后关怀</a></li>
+                    </ul>
+                </div>
+            </div>
+
             <div class="layui-row yty-bck">
                 <div class="layui-col-12">
                     <!----------------------------------表格查询条件begin------------------------------->
@@ -70,6 +99,7 @@
         layer.load(0, {shade: false});
         var tableCommon = {
             elem: '#order_care_data_list'
+//            ,height:"400px"
             ,formId:'search_form'  //查询form表单id
             ,method:'post'
             ,url:"/sms_data.json" //对接请求后台数据
@@ -140,7 +170,8 @@
             console.log(obj.event);
             if(obj.event == 'add_task') {
                 var url = "{:url('admin/order/task_add')}"
-                we.api.open(url,'下单关怀 > 新建任务',{zIndex:19891017,shade: 0.4},['98%' , '90%']);
+//                window.location.href = url;
+                we.api.open(url,'下单关怀 > 新建任务',{zIndex:19891017,shade: 0.4},['98%' , '80%']);
             }
         })
 
@@ -149,7 +180,8 @@
             console.log(obj.event);
             if(obj.event == 'edit') {
                 var url = "{:url('admin/order/task_add')}"; //对接后台编辑url
-                we.api.open(url,'下单关怀 > 编辑任务',{zIndex:19891017,shade: 0.4},['98%' , '90%']);
+//                window.location.href = url;
+                we.api.open(url,'下单关怀 > 编辑任务',{zIndex:19891017,shade: 0.4},['98%' , '80%']);
             } else {
                 layer.confirm('请确定是否删除？',{
                     title:'温馨提示',
