--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -6,7 +6,7 @@
         <div class="layui-col-md12 webody body-overflow">
             <div class="layui-card margin_buttom5 padding20_10 overflow-y">
                 <!--<div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>所有通知环节</div>-->
-                <div class="layui-card-body layui-card-body-padding">
+                <div class="layui-card-body">
                     <ul class="notice_ulstyle">
                         <li><a href=""><p class="img img1"></p>下单关怀</a><span class="flowLineBottom"><img src="__STATIC__/style/images/flowLineBottom.png" alt=""></span><a href=""><p class="img"></p>货到付款</a></li>
                         <li class="flowLine"></li>
@@ -26,7 +26,7 @@
                         <li class="flowLine"></li>
                         <li><a href=""><p class="img"></p>评价提醒</a><span class="flowLineBottom"><img src="__STATIC__/style/images/flowLineBottom.png" alt=""></span><a href=""><p class="img"></p>退款关怀</a></li>
                         <li class="flowLine"></li>
-                        <li><a href=""><p class="img"></p>好评感谢</a><span class="flowLineBottom"><img src="__STATIC__/style/images/flowLineBottom.png" alt=""></span><a href=""><p class="img"></p>中差评安抚</a></li>
+                        <li  style="width: 60px !important;"><a href=""><p class="img"></p>好评感谢</a><span class="flowLineBottom"><img src="__STATIC__/style/images/flowLineBottom.png" alt=""></span><a href=""><p class="img"></p>中差评安抚</a></li>
                         <li class="flowLine"></li>
                         <li><a href=""><p class="img"></p>售后关怀</a></li>
                     </ul>
