--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2701,6 +2701,7 @@ input:focus, select:focus{
 .notice_ulstyle{
     display: inline-block;
     height: 200px;
+    width: 1200px;
 }
 
 .notice_ulstyle li{
