头工具栏颜色修改

--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -74,7 +74,7 @@
 
 <!-----------------------------表格头部按钮begin---------------------------->
 <script type="text/html" id="toolbar">
-    <a class="layui-btn layui-btn-sm layui-btn-normal yty-btn" lay-event="add_task"><i class="fa fa-plus"></i> 新建任务</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border yty-btn" lay-event="add_task"><i class="fa fa-plus"></i> 新建任务</a>
 </script>
 <!-----------------------------表格头部按钮end----------------------------->
 
