--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -307,12 +307,12 @@
 <!------------------------表格头工具栏begin------------------------->
 <script type="text/html" id="toolbar">
     <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="search"><i class="fa fa-search"></i> 查询</a>
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="sendSms"><i class="fa fa-envelope-o"></i> 发送短信</a>
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="sendSearchResultSms"><i class="fa fa-envelope-o"></i> 按查询结果发送</a>
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="addOrder"><i class="fa fa-plus"></i> 添加订单</a>
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="importOrder"><i class="fa fa-file-text-o"></i> 导入苏宁订单</a>
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="exportOrder"><i class="fa fa-file-o"></i> 导出苏宁订单</a>
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="toBlack"><i class="fa fa-hand-o-down"></i> 拉黑</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="sendSms"><i class="fa fa-envelope-o"></i> 发送短信</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="sendSearchResultSms"><i class="fa fa-envelope-o"></i> 按查询结果发送</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="addOrder"><i class="fa fa-plus"></i> 添加订单</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="importOrder"><i class="fa fa-file-text-o"></i> 导入苏宁订单</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="exportOrder"><i class="fa fa-file-o"></i> 导出苏宁订单</a>
+    <a class="layui-btn layui-btn-sm layui-btn-primary btn-primary-border" lay-event="toBlack"><i class="fa fa-hand-o-down"></i> 拉黑</a>
 </script>
 <!-------------------------表格头工具栏end---------------------------->
 
